@@ -1,5 +1,11 @@
 2004-05-22  Bruno Haible  <bruno@clisp.org>
 
+	Make DEBUG_GCSAFETY work with LINUX_NOEXEC_HEAPCODES.
+	* lispbibl.d (nonimmsubrp): New function/macro.
+	(gcv_object_t::gcv_object_t, pgci_pointable, ngci_pointable): Use it.
+
+2004-05-22  Bruno Haible  <bruno@clisp.org>
+
 	* lispbibl.d (symbol_): Add a filler for LINUX_NOEXEC_HEAPCODES. Check
 	that the size is a multiple of varobject_alignment.
 	* genclisph.d (main): Update.
